Fixed a bug where the todoHolder would overflow when it got higher then the screenheight

--- a/css/mainContent/taskHolder.css
+++ b/css/mainContent/taskHolder.css
@@ -84,7 +84,7 @@
 		margin-top: 10px;
 		margin-left: 2px;
 		
-		max-height: 100%;
+		max-height: 10000%;
 		transition: max-height .3s, opacity .3s;
 	}
 	
